Resultado de poly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 server.port = 8443
 spring.application.name = projetos
+
+security.basic.enable: false
+security.ignored=/**
