--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,18 @@
 	<groupId>br.ufrn.imd.bioinfo</groupId>
 	<artifactId>projetos</artifactId>
 	<version>0.0.1-SNAPSHOT</version> 
+	<packaging>jar</packaging>
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.2.RELEASE</version>
     </parent>
+    <properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	    <java.version>1.8</java.version>
+	    <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+	</properties>
 	<dependencies>
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -68,10 +75,24 @@
     </dependencies>
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+				<plugin>
+				    <groupId>org.springframework.boot</groupId>
+				    <artifactId>spring-boot-maven-plugin</artifactId>
+				    <executions>
+				        <execution>
+				            <goals>
+				                <goal>repackage</goal>
+				            </goals>
+				            <configuration>
+				                <classifier>spring-boot</classifier>
+				                <mainClass>
+				                  com.baeldung.executable.ExecutableMavenJar
+				                </mainClass>
+				            </configuration>
+				        </execution>
+				    </executions>
+				</plugin>
 		</plugins>
+		
 	</build>
 </project>
