--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.ufrn.imd.bioinfo</groupId>
 	<artifactId>projetos</artifactId>
-	<version>0.0.1-SNAPSHOT</version> 
+	<version>1.0.0-SNAPSHOT</version> 
 	<packaging>jar</packaging>
     <parent>
 		<groupId>org.springframework.boot</groupId>
@@ -12,7 +12,7 @@
     <properties>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-	    <java.version>1.8</java.version>
+	    <java.version>11</java.version>
 	    <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 	<dependencies>
@@ -71,8 +71,22 @@
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>2.4</version>
-		</dependency>    	
-    </dependencies>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 				<plugin>
