--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url = jdbc:mysql://localhost:3306/Bioinfo
+spring.datasource.url = jdbc:mysql://192.168.1.11:3306/decisiontree
 spring.datasource.username = root
 
 spring.jpa.show-sql=true
