--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url = jdbc:mysql://192.168.1.11:3306/decisiontree
+spring.datasource.url = jdbc:mysql://localhost:3306/decisiontree
 spring.datasource.username = root
 
 spring.jpa.show-sql=true
@@ -12,3 +12,14 @@ spring.application.name = projetos
 
 security.basic.enable: false
 security.ignored=/**
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=danielhenriquefg@gmail.com
+spring.mail.password=########
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.test-connection=true
